--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,13 @@
-spring.application.name=config-server
+server:
+  port: 8888
+
+spring:
+  application:
+    name: config-server
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/akhil3kumar/configuration_properties
+          default-label: main
+          clone-on-start: true
